<resources>
    <string name="app_name">Practica_7_UsoCheckboxes</string>
    <string name="save">guardar</string>
    <string name="check_1">Usar la misma dirección de facturación</string>
    <string name="check_2">Aplicar seguro</string>
    <string name="monto">Monto del giro</string>
    <string name="tv_act_3">Solo cuentas premium</string>
    <string name="check_report_mensual">Generar reporte mensual</string>
    <string name="check_tiempo_local">Envío ajustado a zona de tiempo local</string>
    <string name="btn_update">Actualizar cuenta</string>
    <string name="tv_1">Elije tus intereses</string>
    <string name="check_belleza">Belleza</string>
    <string name="check_familia">Familia</string>
    <string name="check_libros">Libros y literatura</string>
    <string name="check_carreras">Carreras</string>
    <string name="check_educacion">Educación</string>
    <string name="check_eventos">Eventos</string>
    <string name="check_comida">Comida y Bebidas</string>
    <string name="check_videojuegos">Videojuegos</string>
    <string name="check_deportes">Deportes</string>
    <string name="check_arte">Arte</string>
    <string name="pass">Contraseña</string>
    <string name="check_show_pass">Mostrar contraseña</string>
    <string name="tv_channel">¿Dónde oíste de nosotros?</string>
    <string name="check_tv">TV</string>
    <string name="check_amigo">Un amigo</string>
    <string name="check_periodico">Periódico</string>
    <string name="check_radio">Radio</string>
    <string name="check_otros">Otros</string>
    <string name="check_style">Personalizar</string>
    <string name="payment_method">Opciones de pago:</string>
    <string name="radio_1">Depósito directo</string>
    <string name="radio_2">Paypal</string>
    <string name="radio_all">Todos</string>
    <string name="radio_five">Cinco</string>
    <string name="radio_three">Tres</string>
    <string name="radio_one">Uno</string>
    <string name="radio_none">Ninguno</string>
    <string name="radio_soltero">Soltero</string>
    <string name="radio_casado">Casado</string>
    <string name="radio_divorciado">Divorciado</string>
    <string name="radio_viudo">Viudo</string>
    <string name="text_marital">Estado marital:</string>
    <string name="corporativo">Corporativo</string>
    <string name="particular">Particular</string>
    <string name="tipo_cliente">Tipo de cliente</string>
    <string name="name">Nombre completo</string>
    <string name="profesion">Profesión</string>
    <string name="numemp">Número de empleados</string>
    <string name="representative">Representante</string>
    <string name="business_name">Razón social</string>
    <string name="car_brand">¿Qué marca de auto prefieres?</string>
    <string name="question">¿A qué animal nunca dejan de crecerle los dientes?</string>
</resources>
