<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".Main3Activity">
    <TextView
        android:id="@+id/tv_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Body2"
        android:text="@string/tv_act_3"/>
    <CheckBox
        android:id="@+id/check_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_1"
        android:enabled="false"
        android:text="@string/check_report_mensual"/>
    <CheckBox
        android:id="@+id/check_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_1"
        android:enabled="false"
        android:text="@string/check_tiempo_local"/>
    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/check_2"
        android:onClick="actualizarCuenta"
        android:text="@string/btn_update"/>
</RelativeLayout>