<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".Main6Activity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/tv_channel"/>
    <CheckBox
        android:id="@+id/check_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_tv"/>
    <EditText
        android:id="@+id/et_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        android:visibility="gone"
        tools:ignore="LabelFor" />
    <CheckBox
        android:id="@+id/check_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_radio"/>
    <EditText
        android:id="@+id/et_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        android:visibility="gone"
        tools:ignore="LabelFor" />
    <CheckBox
        android:id="@+id/check_periodico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_periodico"/>
    <EditText
        android:id="@+id/et_periodico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        android:visibility="gone"
        tools:ignore="LabelFor" />
    <CheckBox
        android:id="@+id/check_amigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_amigo"/>
    <EditText
        android:id="@+id/et_amigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        android:visibility="gone"
        tools:ignore="LabelFor" />
    <CheckBox
        android:id="@+id/check_otros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_otros"/>
    <EditText
        android:id="@+id/et_otros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        android:visibility="gone"
        tools:ignore="LabelFor" />
</LinearLayout>